monitor.html を更新

--- a/monitor.html
+++ b/monitor.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>LUX SPIRIA Monitor</title>
+<meta charset="UTF-8">
+<title>SPIRIA Monitor</title>
+<style>
+  body { font-family: Arial; background-color: #111; color: #eee; padding: 20px; }
+  .online { color: #0f0; }
+  .offline { color: #f00; }
+  .log { margin-top: 20px; padding: 10px; background: #222; border-radius: 5px; }
+</style>
 </head>
 <body>
-    <!-- 状態をデータ属性として持たせる -->
-    <div id="status" data-online="true" data-connections="5"></div>
+<h1>SPIRIA Monitor</h1>
+<div id="status">読み込み中...</div>
+<div id="last-update"></div>
+<div class="log" id="log"></div>
+
+<script>
+async function loadStatus() {
+    const res = await fetch("logs/interference.json?ts=" + Date.now());
+    const data = await res.json();
+    document.getElementById("status").innerHTML =
+        data.interference ? `<span class='offline'>干渉検出: ${data.source}</span>` :
+                            `<span class='online'>干渉なし</span>`;
+    document.getElementById("last-update").innerText = "最終更新: " + data.last_check;
+    document.getElementById("log").innerHTML = "<pre>" + (data.logs || "ログなし") + "</pre>";
+}
+loadStatus();
+</script>
 </body>
 </html>
