--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       You are not here by accident. If you’ve come to observe, contribute, or ask—come forward with clarity and intention.<br />
       LUX SPIRIA is open—but only to those who come with truth.
     </p>
-    
+    <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">💬 Contact / Discussions</a>
   </div>
 
   <footer>
