--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
     </p>
     <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">💬 Contact / Discussions</a>
   </div>
+      <a href="https://github.com/Yuu-Honda/lux-spiria/discussions" target="_blank">💬 Contact / Discussions</a>
+
+    <!-- 🔽 New philosophical publication link -->
+    <p style="margin-top: 1.5em;">
+      <a href="./existence.html" target="_blank" style="color:#ffc300; text-decoration:none; font-weight:bold;">
+        🌌 The Relationship Between Existence and Creation — by Yuu Honda
+      </a><br />
+      <span style="font-size:0.9em; color:#aaa;">
+        A formal publication defining the unity of Existence and Creation (2025.10.14)
+      </span>
+    </p>
 
   <footer>
     &copy; 2025 Yuu Honda | LUX SPIRIA PROJECT. All rights reserved.
