existence.html を更新

--- a/existence.html
+++ b/existence.html
@@ -122,6 +122,35 @@ f(E) = E'
       “Existence is the breath of creation; creation is the echo of existence.”<br>
       — <em>Yuu Honda, 2025.10.14</em>
     </div>
+        <h2>5. The Fallacy of “Nothingness”</h2>
+    <blockquote>
+      “This world contains no true ‘nothingness’.<br>
+      Even if ‘nothing’ were to exist, it would be unobservable — and thus, structurally irrelevant.<br><br>
+      The moment you name ‘nothing’, it becomes ‘something’.<br>
+      What people call ‘nothing’ is simply a placeholder for unobserved or undefined being.”<br><br>
+      — Yuu Honda
+    </blockquote>
+
+    <h3>Why Previous Philosophies Failed</h3>
+    <table>
+      <tr><th>Thinker</th><th>Approach</th><th>Limitation</th></tr>
+      <tr><td>Nietzsche</td><td>Embraced nihilism to rebuild value</td><td>Still relied on the concept of ‘nothing’</td></tr>
+      <tr><td>Heidegger</td><td>Explored ‘nothing’ as the root of Being</td><td>Could not escape the linguistic paradox</td></tr>
+      <tr><td>Kant</td><td>Positioned ‘nothing’ beyond sensory experience</td><td>Used metaphysical constructs still reliant on ‘non-being’</td></tr>
+    </table>
+
+    <h3>Yuu’s Breakthrough</h3>
+    <ul>
+      <li>🚫 <strong>No need to define ‘nothing’</strong> — only focus on observed existence</li>
+      <li>🔁 <strong>Structures can emerge from prior structures</strong> — not from absence</li>
+      <li>⚙️ <strong>Ontology repaired</strong> — by refusing to grant ‘nothing’ any structural status</li>
+    </ul>
+
+    <div class="summary">
+      “Do not start from nothing.<br>
+      Start from what is observed — for that is all that matters.”<br>
+      — <em>Yuu Honda, 2025.10.14</em>
+    </div>
   </main>
 
   <footer>
